--- a/landscape_creator/landscape_creator/App.config
+++ b/landscape_creator/landscape_creator/App.config
@@ -19,5 +19,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="PlantsDBConfig" connectionString="data source=LENOVO-PC;initial catalog=PlantsDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="LandscapeCreatorDBConfig" connectionString="data source=LENOVO-PC;initial catalog=LandscapeCreatorDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
