--- a/landscape_creator/landscape_creator/landscape_creator.csproj
+++ b/landscape_creator/landscape_creator/landscape_creator.csproj
@@ -66,7 +66,11 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Area.cs" />
+    <Compile Include="Genus.cs" />
+    <Compile Include="LandingRadius.cs" />
+    <Compile Include="LandscapeCreatorDBModel.cs" />
     <Compile Include="LandscapeObject.cs" />
+    <Compile Include="LifeForm.cs" />
     <Compile Include="OtherObject.cs" />
     <Compile Include="Plant.cs" />
     <Compile Include="SunPosition.cs" />
@@ -78,10 +82,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Genus.cs" />
-    <Compile Include="LandingRadius.cs" />
-    <Compile Include="LandscapeCreatorDBModel.cs" />
-    <Compile Include="LifeForm.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -115,6 +115,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\arrow_back.png" />
+    <Resource Include="Images\arrow_bottom.png" />
+    <Resource Include="Images\arrow_bottom_1.png" />
+    <Resource Include="Images\arrow_next.png" />
+    <Resource Include="Images\arrow_top.png" />
+    <Resource Include="Images\delete_sign-512.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
